--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     <a href="#">Private Copier Shop</a>
                   </div>
                 </li>
+                <li><a href="mainmap.html">Maps</a></li>
                 <li><a href="faq.html">FAQ</a></li>
               </ul>
               <p>Welcome to VITrip</p>
