--- a/mainmap.html
+++ b/mainmap.html
@@ -50,6 +50,9 @@
     const process = { env: {} };
     process.env.GOOGLE_MAPS_API_KEY =
       "AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg";
+      <title>Site</title>
+      <link rel="stylesheet" href="style.css">
+      <link rel="javascript" href="backend.js">
 
   </script>
 
@@ -79,11 +82,48 @@ localContextMapView.map.addListener('click', () => {
 
   <link rel="stylesheet" type="text/css" href="map.css" />
   <script rel="javascript" type="text/javascript" src="map.js"></script>
+  <link rel="stylesheet" href="style.css">
+  <link rel="javascript" href="backend.js">
 </head>
 
 
 <body>
-  <p>map layout?</p>
+    <div class="site-title">VITrip</div>
+    <div class="info-page">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li class="dropdown-Categories"><a href="search.html"></a>
+                <a href="javascript:void(0)" class="dropbtn-Categories">Categories</a>
+                <div class="dropdown-content-Categories">
+                  <a href="academic-blocks.html">Academic Blocks</a>
+                  <a href="#">Administrative Offices</a>
+                  <a href="#">Shops</a>
+                  <a href="#">Coffee Shops</a>
+                  <a href="#">Hostel Blocks</a>
+                  <a href="#">Restaurants</a>
+                  <a href="#">ATMs</a>
+                  <a href="#">Pickup Points</a>
+                  <a href="#">Utilities</a>
+                  <a href="#">Sports</a>
+                  <a href="#">Gates</a>
+                  <a href="#">Halls</a>
+                </div>
+            </li>
+            <li class="dropdown">
+              <a href="javascript:void(0)" class="dropbtn">Landmarks</a>
+              <div class="dropdown-content">
+                <a href="#">Swimming Pool - MH</a>
+                <a href="#">Sports Complex - MH</a>
+                <a href="#">Dominos</a>
+                <a href="#">DC Bakery</a>
+                <a href="#">Private Copier Shop</a>
+              </div>
+            </li>
+            <li><a href="mainmap.html">Maps</a></li>
+            <li><a href="faq.html">FAQ</a></li>
+          </ul>
+
+  <p style="text-align: center ; font-size:40px">Location</p>
   <div id="map"></div>
     <div id="coords"></div>
 
