--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                     <a href="javascript:void(0)" class="dropbtn-Categories">Categories</a>
                     <div class="dropdown-content-Categories">
                       <a href="academic-blocks.html">Academic Blocks</a>
-                      <a href="#">Administrative Offices</a>
+                      <a href="administrative-offices.html">Administrative Offices</a>
                       <a href="#">Shops</a>
                       <a href="#">Coffee Shops</a>
                       <a href="#">Hostel Blocks</a>
@@ -40,6 +40,20 @@
                 <li><a href="faq.html">FAQ</a></li>
               </ul>
               <p>Welcome to VITrip</p>
+              <p>A site for navigating around the campus without hazzle</p>
+              <br><br>
+              <div style="float: left;width:40%; border:2px solid black;">
+                <p style=" font-size:20px">Navigate around the campus easily with VITrip</p>
+                <p style=" font-size:20px">Categorized itno various facilities, you can select the place of your choice to reach the destination</p>
+                <p style=" font-size:20px">With on-map markers and locations within campus for each place like ATMs Reastaurants etc and around the university</p>
+              </div>
+              <div style="float: right;width:40%; border:2px solid black; padding-right:5px">
+                <p style=" font-size:20px">Ranked within the top 200 Universities in Asia (QS - Asia University Rankings 2022)</p>
+                <p style=" font-size:20px">NAAC Accreditation with A++ grade in the 4th cycle</p>
+
+                <p style=" font-size:20px">Ranked within the top 200 Universities in Asia (QS - Asia University Rankings 2022)
+
+              </div>
         </div>
     </body>
 </html>
