--- a/mahatma-gandhi-block.html
+++ b/mahatma-gandhi-block.html
@@ -40,33 +40,31 @@ class="dropbtn">Landmarks</a>
 </li>
 <li><a href="faq.html">FAQ</a></li>
 </ul>
-<div style="border:2px solid black;">
-<p style="font-size: 50px; color:blue;">Silver Jubilee Tower</p>
+<p style="font-size: 50px; color:blue;">Mahatma Gandhi Block</p>
 <hr>
 <div class="SJT">
 <a>
-Silver Jublee Tower a.k.a SJT is one of the academic 
-blocks of VIT. 
-It was inaugurated when VIT completed 25 years hence it 
-is named silver jubilee.It was inaugurated by honorable Shri G.K Vasan, 
-Minister for Shipping, Govt. of India on 29th September, 
-2009 in the presence of honorable Shri Pranab Mukherjee, 
-former Finance Minister and the Ex-President of our country. Apart from 
-enormous and spacious classrooms, brilliantly designed 
-smart classrooms and galleries add to the list of unique 
-features of SJT.
+The Gandhi Block adds glory to the magnificent and 
+beautiful campus of VIT. Located at one end of the campus and adjacent to the 
+SJT Building, it was inaugurated by Hon’ble Ms. Padmaja Chunduru , Managing 
+Director & CEO, Indian Bank on 15th March, 2019 in the presence of Dr. G 
+Viswanathan, Chancellor, Sri Dr. Sekar Viswanathan, Vice President and Sri Dr. 
+Sankar Viswanathan, Vice President. Apart from enormous and spacious 
+classrooms, Studios with Court Yards, brilliantly designed seminar Halls and 
+Amphi Theatre add to the list of unique features of Gandhi Block.
 </a>
 <br></br>
 <a style="text-decoration:dashed; font-size: 17px;color: 
 rgb(255, 0, 0);">Note : Click 'Directions' for Navigation.</a>
 </div>
 <iframe
-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.0129552023286!
-2d79.161756014612!3d12.971022690856268!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1
-!3m3!1m2!1s0x3bad47a28d145d6f%3A0xd1465a973c93afe3!2sSJT%2C%20VIT%20University
-%2C%20Vellore%2C%20Tamil%20Nadu%20632014%2C%20India!5e0!3m2!1sen!2sus!4v166499
-7850722!5m2!1sen!2sus" width="95%" height="550" style="border: 1px solid 
-black;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-whendowngrade"></iframe>
+src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.995456390724!2
+d79.16576681461197!3d12.972142190855498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.
+1!3m3!1m2!1s0x3bad473f91bcbc95%3A0xa960c836093e6a83!2sMahatma%20Gandhi%20Block
+%2C%20VIT%20University!5e0!3m2!1sen!2sus!4v1665000472536!5m2!1sen!2sus"
+width="95%" height="550" style="border:1px solid black;" allowfullscreen=""
+loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 <br></br>
 </div>
 </body>
+</html>
