--- a/sri-m-vishweshwaraiah.html
+++ b/sri-m-vishweshwaraiah.html
@@ -40,33 +40,32 @@ class="dropbtn">Landmarks</a>
 </li>
 <li><a href="faq.html">FAQ</a></li>
 </ul>
-<div style="border:2px solid black;">
-<p style="font-size: 50px; color:blue;">Silver Jubilee Tower</p>
+<p style="font-size: 50px; color:blue;">Sir M.Visvesvaraya Block</p>
 <hr>
 <div class="SJT">
 <a>
-Silver Jublee Tower a.k.a SJT is one of the academic 
-blocks of VIT. 
-It was inaugurated when VIT completed 25 years hence it 
-is named silver jubilee.It was inaugurated by honorable Shri G.K Vasan, 
-Minister for Shipping, Govt. of India on 29th September, 
-2009 in the presence of honorable Shri Pranab Mukherjee, 
-former Finance Minister and the Ex-President of our country. Apart from 
-enormous and spacious classrooms, brilliantly designed 
-smart classrooms and galleries add to the list of unique 
-features of SJT.
+The Sir M Vishveshvaraiya Building was inaugurated by 
+Hon’ble Dr. Kalaignar M. Karunanidhi , Former Chief Minister of Tamil Nadu 
+under the president-ship of Hon’ble Thiru Durai Murugan , Minister for PWD in 
+the presence of Hon’ble Thiru. Arcot N. Veeraswamy , Minister for Health and 
+Electricity and Hon’ble Thiru K. Pitchandi , Minister for Housing and Dr. G. 
+Viswanathan, Chancellor on 20th September 1998. SMV is also called ‘The 
+Hexagon’ due to its unique architecture. The building is in the shape of a 
+hexagon consisting of spacious classrooms and well-equipped labs , mostly 
+Chemical and Biotechnology Labs. SMV houses the School of Bio-sciences and 
+Technology (SBST), Catering and Hotel Management.
 </a>
 <br></br>
 <a style="text-decoration:dashed; font-size: 17px;color: 
 rgb(255, 0, 0);">Note : Click 'Directions' for Navigation.</a>
 </div>
 <iframe
-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.0129552023286!
-2d79.161756014612!3d12.971022690856268!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1
-!3m3!1m2!1s0x3bad47a28d145d6f%3A0xd1465a973c93afe3!2sSJT%2C%20VIT%20University
-%2C%20Vellore%2C%20Tamil%20Nadu%20632014%2C%20India!5e0!3m2!1sen!2sus!4v166499
-7850722!5m2!1sen!2sus" width="95%" height="550" style="border: 1px solid 
-black;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-whendowngrade"></iframe>
+src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.0409908466268!
+2d79.15548471461193!3d12.969228890857433!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13
+.1!3m3!1m2!1s0x3bad479f7f57cb41%3A0xca622aae338c108f!2sSMV!5e0!3m2!1sen!2sus!4
+v1665000983123!5m2!1sen!2sus" width="95%" height="550" style="border:1px solid 
+black;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 <br></br>
 </div>
 </body>
+</html>
