--- a/technology-tower.html
+++ b/technology-tower.html
@@ -10,11 +10,11 @@
 <ul>
 <li><a href="index.html">Home</a></li>
 <li class="dropdown-Categories"><a href="search.html"></a>
-<a href="javascript:void(0)" class="dropbtn-Categories">Categories</a>
+<a href="javascript:void(0)" class="dropbtnCategories">Categories</a>
 <div class="dropdown-content-Categories">
 <a href="./academic-blocks.html">Academic 
 Blocks</a>
-<a href="./administrative-blocks.html">Administrative Offices</a>
+<a href="./administrativeblocks.html">Administrative Offices</a>
 <a href="./shop.html">Shops</a>
 <a href="#">Coffee Shops</a>
 <a href="#">Hostel Blocks</a>
@@ -40,33 +40,31 @@ class="dropbtn">Landmarks</a>
 </li>
 <li><a href="faq.html">FAQ</a></li>
 </ul>
-<div style="border:2px solid black;">
-<p style="font-size: 50px; color:blue;">Silver Jubilee Tower</p>
+<p style="font-size: 50px; color:blue;">Technology Tower</p>
 <hr>
 <div class="SJT">
 <a>
-Silver Jublee Tower a.k.a SJT is one of the academic 
-blocks of VIT. 
-It was inaugurated when VIT completed 25 years hence it 
-is named silver jubilee.It was inaugurated by honorable Shri G.K Vasan, 
-Minister for Shipping, Govt. of India on 29th September, 
-2009 in the presence of honorable Shri Pranab Mukherjee, 
-former Finance Minister and the Ex-President of our country. Apart from 
-enormous and spacious classrooms, brilliantly designed 
-smart classrooms and galleries add to the list of unique 
-features of SJT.
+The grand Technology Tower, popularly known as TT, is an 
+architectural marvel. It was inaugurated by Honourable Justice Mr. Doraiswamy 
+Raju of the Supreme Court of India, in the presence of Dr. K 
+Venkatasubramanian, a member of the Planning Commission of India, Dr. G 
+Viswanathan, Chancellor and Sri G.V Selvam, Vice President. The building 
+consists of 7 floors, boasts of two conference halls - conference Hall @ TBI 
+with a capacity of 20 and 454 sq. ft. in area and Conference Hall @ TIFAC with 
+a capacity of 14 and 300 sq. ft. in area.
 </a>
 <br></br>
 <a style="text-decoration:dashed; font-size: 17px;color: 
 rgb(255, 0, 0);">Note : Click 'Directions' for Navigation.</a>
 </div>
 <iframe
-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.0129552023286!
-2d79.161756014612!3d12.971022690856268!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1
-!3m3!1m2!1s0x3bad47a28d145d6f%3A0xd1465a973c93afe3!2sSJT%2C%20VIT%20University
-%2C%20Vellore%2C%20Tamil%20Nadu%20632014%2C%20India!5e0!3m2!1sen!2sus!4v166499
-7850722!5m2!1sen!2sus" width="95%" height="550" style="border: 1px solid 
-black;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-whendowngrade"></iframe>
+src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.016689693343!2
+d79.1550424221649!3d12.97078376161051!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!
+3m3!1m2!1s0x3bad47a1c31ff897%3A0x25b8753e051621bd!2sTechnology%20Tower%20-
+%20TT!5e0!3m2!1sen!2sus!4v1664999800249!5m2!1sen!2sus" width="95%"
+height="550" style="border:1px solid black;" allowfullscreen="" loading="lazy"
+referrerpolicy="no-referrer-when-downgrade"></iframe>
 <br></br>
 </div>
 </body>
+</html
