Update and rename mahatma-gandhi-block.html to Academics Block/mahatma-gandhi-block.html

--- a/Academics Block/mahatma-gandhi-block.html
+++ b/Academics Block/mahatma-gandhi-block.html
@@ -1,8 +1,9 @@
 <html>
 <head>
 <link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="academic-blocks-css.css">
+<link rel="stylesheet" href="Academics Block/academic-blocks-css.css">
 <link rel="javascript" href="backend.js">
+<title>Mahatma gandhi block</title>
 </head>
 <body>
 <div class="site-title">VITrip</div>
@@ -12,7 +13,7 @@
 <li class="dropdown-Categories"><a href="search.html"></a>
 <a href="javascript:void(0)" class="dropbtn-Categories">Categories</a>
 <div class="dropdown-content-Categories">
-<a href="./academic-blocks.html">Academic 
+<a href="Academics Block/academic-blocks.html">Academic 
 Blocks</a>
 <a href="./administrative-blocks.html">Administrative Offices</a>
 <a href="./shop.html">Shops</a>
