--- a/Academics Block/academic-blocks.html
+++ b/Academics Block/academic-blocks.html
@@ -1,8 +1,9 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="academic-blocks-css.css">
+        <link rel="stylesheet" href="Academics Block/academic-blocks-css.css">
         <link rel="javascript" href="backend.js">
+        <title>Academics Block</title>
     </head>
     <body>
         <body>
@@ -10,10 +11,10 @@
             <div class="info-page-acd">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li class="dropdown-Categories"><a href="search.html"></a>
+                    <li class="dropdown-Categories">
                         <a href="javascript:void(0)" class="dropbtn-Categories">Categories</a>
                         <div class="dropdown-content-Categories">
-                          <a href="academic-blocks.html">Academic Blocks</a>
+                          <a href="Academics Block/academic-blocks.html">Academic Blocks</a>
                           <a href="#">Administrative Offices</a>
                           <a href="#">Shops</a>
                           <a href="#">Coffee Shops</a>
@@ -83,7 +84,7 @@
               <p style="font-size: 17px;" >Graphics Laboratory is located in T.S. SANTHANAM
                   COMPUTING CENTRE in the first floor of MGR Block named as MB-114, MB-115, MB-116, MB-117 and MB220 under School of Mechanical Engineering,
                   Department of Design and Automation</p>
-                  <br>
+              <br>
               <p style="font-size: 17px;" >It was the first centre to be set up in India for disaster mitigation and management after the National Disaster Management Act was passed in Parliament in December 2005. The focus areas are Research, Development & Consultancy Services in Disaster Reduction Programs, Innovative Disaster Education Initiatives and Knowledge Networking & Partnerships. </p>
               <p style="font-size: 17px;" >It has specialized collections of books, journals & other resources in Mathematics & Sciences, Engineering and Technology, Biotechnology, Humanities, Social Sciences and Management ranging from printed books, e-books, back volumes and CDs\DVDs.</p>
               <br>
