--- a/Academics Block/academic-blocks.html
+++ b/Academics Block/academic-blocks.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="Academics Block/academic-blocks-css.css">
+        <link rel="stylesheet" href="academic-blocks-css.css">
         <link rel="javascript" href="backend.js">
         <title>Academics Block</title>
     </head>
@@ -14,7 +14,7 @@
                     <li class="dropdown-Categories">
                         <a href="javascript:void(0)" class="dropbtn-Categories">Categories</a>
                         <div class="dropdown-content-Categories">
-                          <a href="Academics Block/academic-blocks.html">Academic Blocks</a>
+                          <a href="academic-blocks.html">Academic Blocks</a>
                           <a href="#">Administrative Offices</a>
                           <a href="#">Shops</a>
                           <a href="#">Coffee Shops</a>
