--- a/HostelBlocks.html
+++ b/HostelBlocks.html
@@ -41,7 +41,7 @@
                     <li><a href="mainmap.html">Maps</a></li>
                     <li><a href="faq.html">FAQ</a></li>
                   </ul>    
-                  <p style="font-size: 50px; color:blue;">Academic Blocks</p>
+                  <p style="font-size: 50px; color:blue;">Hostel Blocks</p>
                   <div class="block-list-adc" style="margin:20px; width:50px;">
                     <ul>
                   <li><a href="silver-jubilee-tower.html">Silver Jubilee Tower</a></li>
