--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           window.weatherWidgetConfig =  window.weatherWidgetConfig || [];
           window.weatherWidgetConfig.push({
               selector:".weatherWidget",
-              apiKey:"QTX7BAX9EK58FSQRXMBAWDZ4A", //Sign up for your personal key
+              apiKey:"", //Sign up for your personal key
               location:"Chennai, India", //Enter an address
               unitGroup:"metric", //"us" or "metric"
               forecastDays:5, //how many days forecast to show
