--- a/faq.html
+++ b/faq.html
@@ -1,38 +1,38 @@
 <html>
     <html>
     <head>
-        <title>Site</title>
+        <title>FAQ</title>
         <link rel="stylesheet" href="style.css">
         <link rel="javascript" href="backend.js">
+
     </head>
 
     <style>
         body{
            font-family: Arial, Helvetica, sans-serif;
-           background:  #23242a;
-           align: center;
+           background:  #ffffff;
+           text-align: center;
            position: relative;
        }
        #fieldset1{
            
             width: 800px;
-            background: #2a3f3b;
-             color: aliceblue;
-             align: center;
+            background: #ffffff;
+             color: rgb(0, 0, 0);
+             text-align: center;
              border: 2px #2a2f3b solid;
+             width: 98%;
        }
 
        #fieldset2{
-           background: #323741;
-           border: 1px #363a43 solid;
+           background: #ffffff;
+           border: 1px #ffffff solid;
            box-shadow: 0 0.5em 1em rgba(0,0,0,0.2);
-           color: #9fa5b5;
-           align: center;
+           color: #000000;
+           text-align: center;
 
        }
        </style>
-
-
     <body>
         <div class="site-title">VITrip</div>
         <div class="info-page">
@@ -46,7 +46,7 @@
                       <a href="#">Shops</a>
                       <a href="#">Coffee Shops</a>
                       <a href="#">Hostel Blocks</a>
-                      <a href="#">Restaurants</a>
+                      <a href="Restaurants.html">Restaurants</a>
                       <a href="#">ATMs</a>
                       <a href="#">Pickup Points</a>
                       <a href="#">Utilities</a>
@@ -69,13 +69,8 @@
                 <li><a href="faq.html">FAQ</a></li>
               </ul>
 
-
-
-
-
-
-
               <h1 style=text-align:center>Frequently Asked Questions</h1>
+            <button onclick="myFunction()" style="float: right; background-color:teal">Toggle mode</button>
 
               <fieldset id="fieldset1">What is VITrip?
                 <fieldset id="fieldset2"> 
@@ -129,11 +124,30 @@
           </fieldset>
           
           <br>
+          <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+          <script>
+            function myFunction() {
+               var element = document.body;
+               element.classList.toggle("dark-mode");
+            }
+            let mybutton = document.getElementById("myBtn");
 
+// When the user scrolls down 20px from the top of the document, show the button
+window.onscroll = function() {scrollFunction()};
 
+function scrollFunction() {
+  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+    mybutton.style.display = "block";
+  } else {
+    mybutton.style.display = "none";
+  }
+}
 
-
-
-
+// When the user clicks on the button, scroll to the top of the document
+function topFunction() {
+  document.body.scrollTop = 0;
+  document.documentElement.scrollTop = 0;
+}
+            </script>
 
 </html>
