--- a/Academics Block/academic-blocks.html
+++ b/Academics Block/academic-blocks.html
@@ -44,20 +44,20 @@
                   <p style="font-size: 50px; color:blue;">Academic Blocks</p>
                   <div class="block-list-adc" style="margin:10px; width:30%;">
                     <ul>
-                  <p><a href="silver-jubilee-tower.html" style="text-decoration: none;">Silver Jubilee Tower</a></li>
-                  <p><a href="main-building.html" style="text-decoration: none;">Main Building</a></li>
-                  <p><a href="computational-fluid-dynamics-lab.html" style="text-decoration: none;">Computational Fluid Dynamics Lab</a></li>
-                  <p><a href="computer-aided-machine-drawing-lab.html" style="text-decoration: none;">Computer Aided Machine Drawing and Product Design Laboratory</a></li>
-                  <p><a href="engg-graphics-lab.html" style="text-decoration: none;">Engg. Graphics Lab</a></li>
-                  <p><a href="centre-of-disaster-mititgation-and-management.html" style="text-decoration: none;">Centre Of Disaster Mitigation And Management</a></li>
-                  <p><a href="periyar-central.html" style="text-decoration: none;">PERIYAR EVR CENTRAL LIBRARY</a></li>
-                  <p><a href="al-mudaliar-block.html" style="text-decoration: none;">A.L. MUDALIAR BLOCK</a></li>
-                  <p><a href="sri-m-vishweshwaraiah.html" style="text-decoration: none;">Sri M Vishweshwaraiah Building</a></li>
-                  <p><a href="technology-tower.html" style="text-decoration: none;">Technology Tower</a></li>
-                  <p><a href="gd-naidu-block.html" style="text-decoration: none;">G.D. Naidu Block</a></li>
-                  <p><a href="mahatma-gandhi-block.html" style="text-decoration: none;">Mahatma Gandhi Block</a></li>
-                  <p><a href="chinese-language-centre.html" style="text-decoration: none;">Chinese Language Centre</a></li>
-                  <p><a href="pearl-research-park.html" style="text-decoration: none;">Pearl Research Park</a></li>
+                  <p><a href="silver-jubilee-tower.html" style="text-decoration: none;">Silver Jubilee Tower</a></p>
+                  <p><a href="main-building.html" style="text-decoration: none;">Main Building</a></p>
+                  <p><a href="computational-fluid-dynamics-lab.html" style="text-decoration: none;">Computational Fluid Dynamics Lab</a></p>
+                  <p><a href="computer-aided-machine-drawing-lab.html" style="text-decoration: none;">Computer Aided Machine Drawing and Product Design Laboratory</a></p>
+                  <p><a href="engg-graphics-lab.html" style="text-decoration: none;">Engg. Graphics Lab</a></p>
+                  <p><a href="centre-of-disaster-mititgation-and-management.html" style="text-decoration: none;">Centre Of Disaster Mitigation And Management</a></p>
+                  <p><a href="periyar-central.html" style="text-decoration: none;">PERIYAR EVR CENTRAL LIBRARY</a></p>
+                  <p><a href="al-mudaliar-block.html" style="text-decoration: none;">A.L. MUDALIAR BLOCK</a></p>
+                  <p><a href="sri-m-vishweshwaraiah.html" style="text-decoration: none;">Sri M Vishweshwaraiah Building</a></p>
+                  <p><a href="technology-tower.html" style="text-decoration: none;">Technology Tower</a></p>
+                  <p><a href="gd-naidu-block.html" style="text-decoration: none;">G.D. Naidu Block</a></p>
+                  <p><a href="mahatma-gandhi-block.html" style="text-decoration: none;">Mahatma Gandhi Block</a></p>
+                  <p><a href="chinese-language-centre.html" style="text-decoration: none;">Chinese Language Centre</a></p>
+                  <p><a href="pearl-research-park.html" style="text-decoration: none;">Pearl Research Park</a></p>
                     </ul>
                 </div>
             <div style="float:right ; width:70%">
