--- a/Academics Block/academic-blocks.html
+++ b/Academics Block/academic-blocks.html
@@ -5,6 +5,11 @@
         <link rel="javascript" href="backend.js">
         <title>Academics Block</title>
     </head>
+          p{
+          font-size: 17px; border:1px solid rgb(0, 0, 0); padding:5px; 
+              margin:10px;background-color: aquamarine;
+
+      }
     <body>
         <body>
             <div class="site-title">VITrip</div>
