--- a/main-building.html
+++ b/main-building.html
@@ -3,7 +3,22 @@
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="academic-blocks-css.css">
 <link rel="javascript" href="backend.js">
+<title>Main Building</title>
 </head>
+<style>
+    .a1{
+        color: #4c4a37; font-family: 'Source Sans Pro', sans-serif;
+         font-size: 18px; line-height: 32px; margin: 0 0 24px;
+    }
+    body{
+        background-color: beige;
+    }
+    .h1{
+        color: #7c795d; font-family: 'Trocchi', serif; font-size: 55px; font-weight: normal; line-height: 48px; margin: 0;
+    
+    }
+    
+    </style>
 <body>
 <body>
 <div class="site-title">VITrip</div>
@@ -39,13 +54,14 @@ class="dropbtn">Landmarks</a>
 <a href="#">Private Copier Shop</a>
 </div>
 </li>
+<li><a href="mainmap.html">Maps</a></li>
 <li><a href="faq.html">FAQ</a></li>
 </ul>
 <div style="border:2px solid black;">
-<p style="font-size: 50px; color:blue;">Main building</p>
+<p class="h1">Main building</p>
 <hr>
 <div class="SJT">
-<a>
+<a class="a1">
 The Dr.M.G.R. Block is the heart and soul of VIT. It 
 includes the Chancellor’s Office, Admissions Office, Finance Office, the 
 Director of Student Welfare Office and the International Relations Office 
