--- a/pearl-research-park.html
+++ b/pearl-research-park.html
@@ -4,6 +4,20 @@
 <link rel="stylesheet" href="academic-blocks-css.css">
 <link rel="javascript" href="backend.js">
 </head>
+<style>
+    .a1{
+        color: #4c4a37; font-family: 'Source Sans Pro', sans-serif;
+         font-size: 18px; line-height: 32px; margin: 0 0 24px;
+    }
+    body{
+        background-color: beige;
+    }
+    .h1{
+        color: #7c795d; font-family: 'Trocchi', serif; font-size: 55px; font-weight: normal; line-height: 48px; margin: 0;
+    
+    }
+    
+    </style>
 <body>
 <div class="site-title">VITrip</div>
 <div class="info-page">
@@ -40,10 +54,10 @@ class="dropbtn">Landmarks</a>
 </li>
 <li><a href="faq.html">FAQ</a></li>
 </ul>
-<p style="font-size: 50px; color:blue;">Pearl Research Park</p>
+<p class="h1">Pearl Research Park</p>
 <hr>
 <div class="SJT">
-<a>
+<a class="a1">
 Engineering Graphics Lab-2.
 </a>
 <br></br>
