--- a/Academics Block/mahatma-gandhi-block.html
+++ b/Academics Block/mahatma-gandhi-block.html
@@ -5,6 +5,20 @@
 <link rel="javascript" href="backend.js">
 <title>Mahatma gandhi block</title>
 </head>
+<style>
+    .a1{
+        color: #4c4a37; font-family: 'Source Sans Pro', sans-serif;
+         font-size: 18px; line-height: 32px; margin: 0 0 24px;
+    }
+    body{
+        background-color: beige;
+    }
+    .h1{
+        color: #7c795d; font-family: 'Trocchi', serif; font-size: 55px; font-weight: normal; line-height: 48px; margin: 0;
+    
+    }
+    
+    </style>
 <body>
 <div class="site-title">VITrip</div>
 <div class="info-page">
@@ -41,10 +55,10 @@ class="dropbtn">Landmarks</a>
 </li>
 <li><a href="faq.html">FAQ</a></li>
 </ul>
-<p style="font-size: 50px; color:blue;">Mahatma Gandhi Block</p>
+<p class="h1">Mahatma Gandhi Block</p>
 <hr>
 <div class="SJT">
-<a>
+<a class="a1">
 The Gandhi Block adds glory to the magnificent and 
 beautiful campus of VIT. Located at one end of the campus and adjacent to the 
 SJT Building, it was inaugurated by Hon’ble Ms. Padmaja Chunduru , Managing 
