--- a/Academics Block/silver-jubilee-tower.html
+++ b/Academics Block/silver-jubilee-tower.html
@@ -5,6 +5,20 @@
 <link rel="javascript" href="backend.js">
 <title>Silver Jubilee Tower</title>
 </head>
+<style>
+.a1{
+    color: #4c4a37; font-family: 'Source Sans Pro', sans-serif;
+     font-size: 18px; line-height: 32px; margin: 0 0 24px;
+}
+body{
+    background-color: beige;
+}
+.h1{
+    color: #7c795d; font-family: 'Trocchi', serif; font-size: 55px; font-weight: normal; line-height: 48px; margin: 0;
+
+}
+
+</style>
 <body>
 <div class="site-title">VITrip</div>
 <div class="info-page">
@@ -44,10 +58,10 @@ class="dropbtn">Landmarks</a>
 <li><a href="faq.html">FAQ</a></li>
 </ul>
 <div style="border:2px solid black;">
-<p style="font-size: 50px; color:blue;">Silver Jubilee Tower</p>
+<p class="h1">Silver Jubilee Tower</p>
 <hr>
 <div class="SJT">
-<a>
+<a class="a1">
 Silver Jublee Tower a.k.a SJT is one of the academic 
 blocks of VIT. 
 It was inaugurated when VIT completed 25 years hence it 
