--- a/Academics Block/academic-blocks.html
+++ b/Academics Block/academic-blocks.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <body>
-            <div class="site-title">VITrip</div>
+            <div class="site-title">VITravel</div>
             <div class="info-page-acd">
                 <ul>
                     <li ><a href="index.html" style="color: white;">Home</a></li>
@@ -18,7 +18,7 @@
                           <a href="#">Administrative Offices</a>
                           <a href="#">Shops</a>
                           <a href="#">Coffee Shops</a>
-                          <a href="#">Hostel Blocks</a>
+                          <a href="HostelBlocks.html">Hostel Blocks</a>
                           <a href="#">Restaurants</a>
                           <a href="#">ATMs</a>
                           <a href="#">Pickup Points</a>
@@ -41,15 +41,21 @@
                     <li><a href="mainmap.html" style="color: white;">Maps</a></li>
                     <li><a href="faq.html" style="color: white;">FAQ</a></li>
                   </ul>    
+                  <button onclick="myFunction()" style="float: right; background-color:teal">Toggle mode</button>
+
                   <p style="font-size: 50px; color:blue;">Academic Blocks</p>
+                  
                   <div class="block-list-adc" style="margin:10px; width:30%;">
                     <ul>
                   <p><a href="silver-jubilee-tower.html" style="text-decoration: none;">Silver Jubilee Tower</a></p>
-                  <p><a href="main-building.html" style="text-decoration: none;">Main Building</a></p>
-                  <p><a href="computational-fluid-dynamics-lab.html" style="text-decoration: none;">Computational Fluid Dynamics Lab</a></p>
+                  <br>
+                  <p><a href="main-building.html" style="text-decoration: none;">Main Building</a></p><br>
+                  <p><a href="computational-fluid-dynamics-lab.html" style="text-decoration: none;">Computational Fluid Dynamics Lab</a></p><br><br>
                   <p><a href="computer-aided-machine-drawing-lab.html" style="text-decoration: none;">Computer Aided Machine Drawing and Product Design Laboratory</a></p>
-                  <p><a href="engg-graphics-lab.html" style="text-decoration: none;">Engg. Graphics Lab</a></p>
+                  <br><br>
+                  <p><a href="engg-graphics-lab.html" style="text-decoration: none;">Engg. Graphics Lab</a></p><br>
                   <p><a href="centre-of-disaster-mititgation-and-management.html" style="text-decoration: none;">Centre Of Disaster Mitigation And Management</a></p>
+                  <br><br>
                   <p><a href="periyar-central.html" style="text-decoration: none;">PERIYAR EVR CENTRAL LIBRARY</a></p>
                   <p><a href="al-mudaliar-block.html" style="text-decoration: none;">A.L. MUDALIAR BLOCK</a></p>
                   <p><a href="sri-m-vishweshwaraiah.html" style="text-decoration: none;">Sri M Vishweshwaraiah Building</a></p>
@@ -65,6 +71,7 @@
                 It gives an aesthetic view of the surroundings, and serves as a stress buster and an ideal place for students to learn.
                 </p>
               <p style="font-size: 17px;" >The Dr.M.G.R. Block is the heart and soul of VIT. It includes the Chancellor's Office, Admissions Office, Finance Office, the Director of Student Welfare Office and the International Relations Office which guide the students in their academic journey at VIT.</p>
+              <br>
               <p style="font-size: 17px;" >The CFD lab established under School of Mechanical Engineering (SMEC).CFD tools like ANSYS FLUENT 16 & 18. ANSYS CFX 18, ICEM-CFD,
                 CONVERGE STUDIO 2.4 & COMSOL 5.5, are used to carry out the
                 research.
@@ -78,14 +85,14 @@
                   the working as well as non-working hours under the
                   supervision of experienced faculty and technically
                   skilled and enthusiastic staffs”</p>
-              <br>
-              <br>
+              
               <br>
               <p style="font-size: 17px;" >Graphics Laboratory is located in T.S. SANTHANAM
                   COMPUTING CENTRE in the first floor of MGR Block named as MB-114, MB-115, MB-116, MB-117 and MB220 under School of Mechanical Engineering,
                   Department of Design and Automation</p>
               <br>
               <p style="font-size: 17px;" >It was the first centre to be set up in India for disaster mitigation and management after the National Disaster Management Act was passed in Parliament in December 2005. The focus areas are Research, Development & Consultancy Services in Disaster Reduction Programs, Innovative Disaster Education Initiatives and Knowledge Networking & Partnerships. </p>
+              <br>
               <p style="font-size: 17px;" >It has specialized collections of books, journals & other resources in Mathematics & Sciences, Engineering and Technology, Biotechnology, Humanities, Social Sciences and Management ranging from printed books, e-books, back volumes and CDs\DVDs.</p>
               <br>
               <p style="font-size: 17px;" >Shortly referred as the ALM block.Currently comprising the Chettinadu health centre, this building caters to all the medical needs and emergencies of the entire college for three full floors.</p>
@@ -101,10 +108,42 @@
               <br>
               <p style="font-size: 17px;" >Pearl Research Park would be the biggest building complex at VIT so far and will house the Industry Technology Park and various Research centres. It will also include smart class rooms, multipurpose gallery halls, cafeterias and faculty offices.
                 The building offers separate spaces for not just the student research activity, but has independent technology parks for the industry professionals to do their research activity as well.</p>
-            </div>                
+            </div>  
+            <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+            <script>
+              function myFunction() {
+                 var element = document.body;
+                 element.classList.toggle("dark-mode");
+              }
+              let mybutton = document.getElementById("myBtn");
+  
+  // When the user scrolls down 20px from the top of the document, show the button
+  window.onscroll = function() {scrollFunction()};
+  
+  function scrollFunction() {
+    if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+      mybutton.style.display = "block";
+    } else {
+      mybutton.style.display = "none";
+    }
+  }
+  
+  // When the user clicks on the button, scroll to the top of the document
+  function topFunction() {
+    document.body.scrollTop = 0;
+    document.documentElement.scrollTop = 0;
+  }
+              </script>
+  
     </body>
     <style>
       p a {color:#400ed6;}         /* Unvisited link  */
 a:visited {color:#400ed6;} /* Visited link    */
+p{
+  font-size: 17px; border:1px solid rgb(0, 0, 0); padding:5px; 
+      margin:10px;background-color: aquamarine;
+
+}
+
     </style>
 </html>
