--- a/HostelBlocks.html
+++ b/HostelBlocks.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <body>
-            <div class="site-title">VITrip</div>
+            <div class="site-title">VITravel</div>
             <div class="info-page-acd">
                 <ul>
                     <li><a href="index.html"  style="color: white;">Home</a></li>
